traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:23: error: Unmatched closing brace '}' ignored here
  }
  ^TraversalZigZag:31: error: expected class or object definition
def isPositionFinale():Boolean =
^TraversalZigZag:38: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalZigZag:41: error: expected start of definition
	override def forward()  {
                 ^TraversalZigZag:44: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalZigZag:47: error: expected start of definition
	override def backward() {
                 ^TraversalZigZag:50: error: Unmatched closing brace '}' ignored here
}
^