traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
var nCase = 0;

override def run()
{
  do suivant();
  while (!isPositionFinale)
  
  ecritMessage(nCase);
}

def suivant()
{
  var x = getX();
  var y = getY();
  
  ecritMessage(nCase);
  
  if (x%2 == 1)
  {
    if (y != getMondeHauteur()-1) setPos(x, y+1);
    else setPos(x+1, y);
  }
  else
  }
    if (y != 0) setPos(x, y-1);
    else setPos(x+1, y);
  }
  
  nCase+=1;
}

def isPositionFinale():Boolean =
{
  return (getX() == getMondeLargeur()-1 && getY() == getMondeHauteur()-1);
}